noinst_LIBRARIES = libdialogs.a
libdialogs_a_SOURCES = \
	newgame_dialog.cpp newgame_dialog.h \
	gameinfo_dialog.cpp gameinfo_dialog.h \
	display_options_dialogs.cpp display_options_dialogs.h \
	about_dialog.cpp about_dialog.h \
	preferences_dialog.cpp preferences_dialog.h \
	validators.cpp validators.h \
	inputctrl.cpp inputctrl.h \
	starterframe.cpp starterframe.h

INCLUDES = -I.. -I../utils -I../sound -I../gtp
