noinst_LIBRARIES = libgtp.a
libgtp_a_SOURCES = \
	gtp.cpp gtp.h \
	gtp_config.cpp gtp_config.h \
	gtp_handler.cpp gtp_handler.h \
	gtp_console.cpp gtp_console.h \
	gtp_game.cpp gtp_game.h \
	gtp_events.cpp gtp_events.h \
	gtp_eventhandler.cpp gtp_eventhandler.h \
	gtp_setup_dialog.cpp gtp_setup_dialog.h \
	gtp_setup_wizard.cpp gtp_setup_wizard.h \
	gtp_scorer.cpp gtp_scorer.h

INCLUDES = -I.. -I../dialogs
