noinst_LIBRARIES = libigs.a
libigs_a_SOURCES = \
	igs_game.cpp igs_game.h \
	igs_player.cpp igs_player.h \
	igs_parser.cpp igs_parser.h igs_regex.h \
	igs_connection.cpp igs_connection.h \
	igs_events.cpp igs_events.h \
	igs_eventhandler.cpp igs_eventhandler.h \
	account_dialog.cpp account_dialog.h \
	playerinfo_dialog.cpp playerinfo_dialog.h \
	shouts_frame.cpp shouts_frame.h \
	match_dialog.cpp match_dialog.h \
	tell_frame.cpp tell_frame.h \
	igs_rank.cpp igs_rank.h \
	autoupdater.cpp autoupdater.h \
	games_table.cpp games_table.h \
	player_table.cpp player_table.h \
	igs_mainframe.cpp igs_mainframe.h \
	playerdb.c playerdb.h \
	playerdb_gui.cpp playerdb_gui.h

INCLUDES = -I.. -I../utils -I../dialogs -I../gtp -I../sound
