EXTRA_DIST = data.dat resource.xrs pythonlib.zip stone.ogg pass.ogg chatIn.ogg beep.ogg matchrequest.ogg tictoc.ogg coords_font.txf FreeSans.ttf glGo.htb de_DE/messages.mo nl_NL/messages.mo
pkgdata_DATA = data.dat resource.xrs pythonlib.zip stone.ogg pass.ogg chatIn.ogg beep.ogg matchrequest.ogg tictoc.ogg coords_font.txf FreeSans.ttf glGo.htb de_DE/messages.mo nl_NL/messages.mo

install-exec-local:
	mkdir -p $(DESTDIR)$(pkgdatadir)/de_DE
	mkdir -p $(DESTDIR)$(pkgdatadir)/nl_NL
