dnl Automake support for the glGo sound libraries
dnl Peter Strempel <pstrempel@users.sourceforge.net>

AC_INIT(sound.cpp)
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(glGo, 0.0.5)

AC_PROG_CXX
AM_PROG_LIBTOOL

dnl Check for SDL
AM_PATH_SDL(1.2.4,
CFLAGS="$CFLAGS $SDL_CFLAGS"
LDFLAGS="$LDFLAGS $SDL_LIBS",
AC_MSG_ERROR([
        SDL 1.2 is not available.
        Please install the SDL 1.2 development package.
]))

dnl Build with OpenAL?
AM_CHECK_OPENAL

AC_OUTPUT([ Makefile ])
